# lifeos

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 5f9bb2e08d7f_create_notes_table.py  7b21f97627ce_create_users_table.py  e734a8580314_create_habits_table.py  ecb8cec12a29_create_tasks_table.py
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/auth/dependencies/: current_user.py
apps/api/app/auth/routers/: auth.py
apps/api/app/auth/schemas/: auth.py
apps/api/app/auth/services/: auth_service.py
apps/api/app/auth/utils/: security.py
apps/api/app/core/: config.py  cors.py  logging.py
apps/api/app/database/: __init__.py  session.py
apps/api/app/habits/: __init__.py
apps/api/app/habits/routers/: __init__.py  habits.py
apps/api/app/habits/schemas/: __init__.py  habits.py
apps/api/app/habits/services/: __init__.py  habit_service.py
apps/api/app/models/: __init__.py  habit.py  note.py  task.py  user.py
apps/api/app/notes/routers/: __init__.py  notes.py
apps/api/app/notes/schemas/: notes.py
apps/api/app/notes/services/: note_service.py
apps/api/app/schemas/: health.py
apps/api/app/services/: __init__.py  health.py
apps/api/app/tasks/routers/: tasks.py
apps/api/app/tasks/schemas/: tasks.py
apps/api/app/tasks/services/: task_service.py
apps/api/lifeos_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_health.py
(+16 files in other folders)
